--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -6,6 +6,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    z-index: 99999999;
+    position: absolute;
+    width: 100%;
   }
   
   .nav ul {
